crud on tenants

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,7 +8,7 @@
             url: '',
             url_text: ""
       } %>
-      <%#= render 'dashboard/metrics_summary' %>
+      <%= render 'dashboard/metrics_summary' %>
     </div>
   </div>
 </div>
