add pagination with kaminari

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "vendor/nucleo/css/nucleo";
 @import "font-awesome";
+@import 'datetime_picker_input'; 
 
 // Bootstrap functions
 @import 'bootstrap/functions';
