--- a/app/views/shared/_sidenav.html.erb
+++ b/app/views/shared/_sidenav.html.erb
@@ -66,7 +66,9 @@
           <span class="docs-normal">Settings</span>
         </h6>
         <!-- Navigation -->
-        <ul class="navbar-nav mb-md-3">
+        <%
+=begin%>
+ <ul class="navbar-nav mb-md-3">
           <li class="nav-item">
             <a class="nav-link" href="<%#= dish_types_path %>">
               <i class="ni ni-spaceship"></i>
@@ -79,7 +81,9 @@
               <i class="ni ni-palette"></i>
               <span class="nav-link-text">Plats</span>
             </a>
-          </li>
+          </li> 
+<%
+=end%>
 <%
 =begin%>
           <li class="nav-item">
