--- a/app/views/tenants/index.html.erb
+++ b/app/views/tenants/index.html.erb
@@ -94,6 +94,7 @@
                         </tbody>
                     </table>
                 </div>
+                <%= paginate @tenants %>
                 <%= render  "shared/delete_modal" %>
             </div>
         </div>
