--- a/app/views/dashboard/_metrics_summary.html.erb
+++ b/app/views/dashboard/_metrics_summary.html.erb
@@ -16,7 +16,7 @@
         </div>
         <p class="mt-3 mb-0 text-sm">
           <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-          <span class="text-nowrap">Since last month</span>
+          <span class="text-nowrap">Depuis le mois dernier</span>
         </p>
       </div>
     </div>
@@ -27,7 +27,7 @@
       <div class="card-body">
         <div class="row">
           <div class="col">
-            <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
+            <h5 class="card-title text-uppercase text-muted mb-0">Nouveaux locataires</h5>
             <span class="h2 font-weight-bold mb-0">2,356</span>
           </div>
           <div class="col-auto">
@@ -38,7 +38,7 @@
         </div>
         <p class="mt-3 mb-0 text-sm">
           <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-          <span class="text-nowrap">Since last month</span>
+          <span class="text-nowrap">Depuis le mois dernier</span>
         </p>
       </div>
     </div>
@@ -49,8 +49,8 @@
       <div class="card-body">
         <div class="row">
           <div class="col">
-            <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-            <span class="h2 font-weight-bold mb-0">924</span>
+            <h5 class="card-title text-uppercase text-muted mb-0">Ciffre d'affaire</h5>
+            <span class="h2 font-weight-bold mb-0">924000</span>
           </div>
           <div class="col-auto">
             <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
@@ -60,7 +60,7 @@
         </div>
         <p class="mt-3 mb-0 text-sm">
           <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-          <span class="text-nowrap">Since last month</span>
+          <span class="text-nowrap">Depuis le mois dernier</span>
         </p>
       </div>
     </div>
@@ -71,8 +71,8 @@
       <div class="card-body">
         <div class="row">
           <div class="col">
-            <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-            <span class="h2 font-weight-bold mb-0">49.65%</span>
+            <h5 class="card-title text-uppercase text-muted mb-0">Retard de Paiements</h5>
+            <span class="h2 font-weight-bold mb-0">9.65%</span>
           </div>
           <div class="col-auto">
             <div class="icon icon-shape bg-gradient-info text-white rounded-circle shadow">
@@ -81,8 +81,8 @@
           </div>
         </div>
         <p class="mt-3 mb-0 text-sm">
-          <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-          <span class="text-nowrap">Since last month</span>
+          <span class="text-danger mr-2"><i class="fa fa-arrow-down"></i> 3.48%</span>
+          <span class="text-nowrap">Depuis le mois dernier</span>
         </p>
       </div>
     </div>
