--- a/app/views/tenants/index.html.erb
+++ b/app/views/tenants/index.html.erb
@@ -42,8 +42,8 @@
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">N-</th>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prenom</th>
+                                <th scope="col"><%= link_to "Nom", :sort => "firstname"%></th>
+                                <th scope="col"><%= link_to "Prenom",:sort => "lastname"%></th>
                                 <th scope="col">Nationalite</th>
                                 <th scope="col">email</th>
                                 <th scope="col">Telephone</th>
