--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -22,5 +22,6 @@
       <%= render partial: 'shared/topnav', locals: { bg_color_class: yield(:topnav_bg) } %>
       <%= yield %>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/metismenu"></script>
   </body>
 </html>
