--- a/app/views/dashboard/_metrics_summary.html.erb
+++ b/app/views/dashboard/_metrics_summary.html.erb
@@ -27,12 +27,12 @@
       <div class="card-body">
         <div class="row">
           <div class="col">
-            <h5 class="card-title text-uppercase text-muted mb-0">Nouveaux locataires</h5>
-            <span class="h2 font-weight-bold mb-0">2,356</span>
+            <h5 class="card-title text-uppercase text-muted mb-0">Total appartements</h5>
+            <span class="h2 font-weight-bold mb-0"><%= @apartments %></span>
           </div>
           <div class="col-auto">
             <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
-              <i class="ni ni-chart-pie-35"></i>
+              <i class="ni ni-building"></i> 
             </div>
           </div>
         </div>
