--- a/app/views/apartments/index.html.erb
+++ b/app/views/apartments/index.html.erb
@@ -4,7 +4,9 @@
             <%= render partial: 'shared/header', locals: {
                     icon: 'building',
                     breadcrumb_1: 'Appartements',
-                    breadcrumb_2: 'Liste'
+                    breadcrumb_2: 'Liste',
+                    main_url: apartments_path,
+                    breadcrumb_url: '#'
                 }
             %>
         </div>
