--- a/app/views/apartments/new.html.erb
+++ b/app/views/apartments/new.html.erb
@@ -5,6 +5,8 @@
                     icon: 'building',
                     breadcrumb_1: 'Appartements',
                     breadcrumb_2: 'nouveau',
+                    main_url: apartments_path,
+                    breadcrumb_url: '#'
                 }
             %>
         </div>
