--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,8 +5,8 @@
             icon: 'home',
             breadcrumb_1: 'Dashboards',
             breadcrumb_2: 'Default',
-            url: '',
-            url_text: ""
+            main_url: dashboard_path,
+            breadcrumb_url: '#'
       } %>
       <%= render 'dashboard/metrics_summary' %>
     </div>
