--- a/app/views/paiements/edit.html.erb
+++ b/app/views/paiements/edit.html.erb
@@ -5,6 +5,8 @@
                     icon: 'money',
                     breadcrumb_1: 'Paiements',
                     breadcrumb_2: @paiement.id.to_s,
+                    main_url: paiements_path,
+                    breadcrumb_url: "#"
                 }
             %>
         </div>
