--- a/app/views/paiements/new.html.erb
+++ b/app/views/paiements/new.html.erb
@@ -5,6 +5,8 @@
                     icon: 'money',
                     breadcrumb_1: 'Paiements',
                     breadcrumb_2: 'nouveau',
+                    main_url: paiements_path,
+                    breadcrumb_url: '#'
                 }
             %>
         </div>
