--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -203,7 +203,7 @@ end
                 <%= image_tag "theme/team-4.jpg", class: "navbar-brand-img", alt: "..." %>
               </span>
               <div class="media-body  ml-2  d-none d-lg-block">
-                <span class="mb-0 text-sm  font-weight-bold"><%= current_user.email %></span>
+                <span class="mb-0 text-sm  font-weight-bold"><%= current_user.firstname %></span>
               </div>
             </div>
           </a>
@@ -211,9 +211,9 @@ end
             <div class="dropdown-header noti-title">
               <h6 class="text-overflow m-0">Welcome!</h6>
             </div>
-            <%= link_to edit_user_path(current_user), class: "dropdown-item" do %>
+            <%= link_to user_profile_path(current_user), class: "dropdown-item" do %>
               <i class="ni ni-single-02"></i>
-              <span>My profile</span>
+              <span>Mon profile</span>
             <% end %>  
             <%
 =begin%>
