--- a/app/views/tenants/new.html.erb
+++ b/app/views/tenants/new.html.erb
@@ -5,6 +5,8 @@
                     icon: 'users',
                     breadcrumb_1: 'Locataires',
                     breadcrumb_2: 'nouveau',
+                    main_url: tenants_path,
+                    breadcrumb_url: '#'
                 }
             %>
         </div>
