--- a/app/views/dashboard/_metrics_summary.html.erb
+++ b/app/views/dashboard/_metrics_summary.html.erb
@@ -50,7 +50,7 @@
         <div class="row">
           <div class="col">
             <h5 class="card-title text-uppercase text-muted mb-0">Ciffre d'affaire</h5>
-            <span class="h2 font-weight-bold mb-0">924000</span>
+            <span class="h2 font-weight-bold mb-0"><%= @paiements %> CFA</span>
           </div>
           <div class="col-auto">
             <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
