--- a/app/views/tenants/edit.html.erb
+++ b/app/views/tenants/edit.html.erb
@@ -5,6 +5,8 @@
                     icon: 'users',
                     breadcrumb_1: 'Locataire',
                     breadcrumb_2: @tenant.full_name
+                    main_url: tenants_path,
+                    breadcrumb_url: '#'
                 }
             %>
         </div>
