upaload image profile

--- a/app/assets/stylesheets/core/cards/_card-profile.scss
+++ b/app/assets/stylesheets/core/cards/_card-profile.scss
@@ -4,7 +4,7 @@
 
 #profile-header {
   min-height: 500px;
-  background-image: url('theme/profile-cover.jpg');
+  background-image: url('https://res.cloudinary.com/finelunch/image/upload/v1619001433/mini-background_azdb5k.jpg');
   background-size: cover;
   background-position: center top;
 }
