--- a/app/views/profile/_form.html.erb
+++ b/app/views/profile/_form.html.erb
@@ -41,18 +41,27 @@
       </div>
     </div>
 
-    <hr class="my-4" />
-  <div class="pl-lg-4">
     <div class="row">
-      <div class="col-lg-6 text-left">
-        <%= link_to dashboard_path, class: "btn btn-outline-default" do %>
-          Annuler
-        <% end %>
-         <%= f.submit "Enregistrer", class: "btn  btn-primary" %>
+      <div class="col-lg">
+        <div class="custom-file">
+          <%= f.label :avatar, class: "custom-file-label", label: "Choisissez l'avatar" %>
+          <%= f.file_field :avatar, class: "custom-file-input" %>
+        </div>
       </div>
-      <div class="col-lg-6"></div>
     </div>
-  </div>
+    <hr class="my-4" />
+
+    <div class="pl-lg-4">
+      <div class="row">
+        <div class="col-lg-6 text-left">
+          <%= link_to dashboard_path, class: "btn btn-outline-default" do %>
+            Annuler
+          <% end %>
+          <%= f.submit "Enregistrer", class: "btn  btn-primary" %>
+        </div>
+        <div class="col-lg-6"></div>
+      </div>
+    </div>
 
   </div>
 <% end %>
