--- a/app/views/auth/logged_out/_footer.html.erb
+++ b/app/views/auth/logged_out/_footer.html.erb
@@ -3,19 +3,16 @@
     <div class="row align-items-center justify-content-xl-between">
       <div class="col-xl-6">
         <div class="copyright text-center text-xl-left text-muted">
-          &copy; 2021 <a href="#" class="font-weight-bold ml-1" target="_blank">Agence Imo</a>
+          &copy; 2021 <a href="#" class="font-weight-bold ml-1" target="_blank">Agence Immo Sen</a>
         </div>
       </div>
       <div class="col-xl-6">
         <ul class="nav nav-footer justify-content-center justify-content-xl-end">
           <li class="nav-item">
-            <a href="#" class="nav-link" target="_blank">Agence Imo</a>
+            <a href="#" class="nav-link" target="_blank">Agence Immo Sen</a>
           </li>
           <li class="nav-item">
-            <a href="#/" class="nav-link" target="_blank">About Us</a>
-          </li>
-          <li class="nav-item">
-            <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+            <a href="#" class="nav-link" target="_blank">MIT License</a>
           </li>
         </ul>
       </div>
