--- a/app/views/profile/_header.html.erb
+++ b/app/views/profile/_header.html.erb
@@ -4,8 +4,8 @@
   <div class="container-fluid d-flex align-items-center">
     <div class="row">
       <div class="col-lg-7 col-md-10">
-        <h1 class="display-2 text-white">Hello <%= current_user.firstname %></h1>
-        <p class="text-white mt-0 mb-5">This is your profile page. You can see the progress you've made with your work and manage your projects or assigned tasks</p>
+        <h1 class="display-2 text-white">Bonjour Mr <%= current_user.firstname %></h1>
+        <p class="text-white mt-0 mb-5">Vous êtes sur votre espace de profile.  Vous pouvez modifier vos informations à tout moment.</p>
       </div>
     </div>
   </div>
