--- a/app/views/profile/_summary_card.html.erb
+++ b/app/views/profile/_summary_card.html.erb
@@ -32,16 +32,16 @@
     </div>
     <div class="text-center">
       <h5 class="h3">
-        <%= current_user.full_name %><span class="font-weight-light">, 27</span>
+        <%= current_user.full_name %><span class="font-weight-light"></span>
       </h5>
       <div class="h5 font-weight-300">
-        <i class="ni location_pin mr-2"></i>Bucharest, Romania
+        <i class="ni location_pin mr-2"></i>Dakar, Sénégal
       </div>
       <div class="h5 mt-4">
-        <i class="ni business_briefcase-24 mr-2"></i>Solution Manager - Creative Tim Officer
+        <i class="ni business_briefcase-24 mr-2"></i>Responsable Agence Immobiblière
       </div>
       <div>
-        <i class="ni education_hat mr-2"></i>University of Computer Science
+        <i class="ni education_hat mr-2"></i>Agence Immo Sen
       </div>
     </div>
   </div>
