--- a/app/views/shared/_delete_modal.html.erb
+++ b/app/views/shared/_delete_modal.html.erb
@@ -3,7 +3,7 @@
         <div class="modal-content bg-gradient-danger">
             
             <div class="modal-header">
-                <h6 class="modal-title" id="modal-title-notification">Your attention is required</h6>
+                <h6 class="modal-title" id="modal-title-notification">Votre attention est requise</h6>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
@@ -13,7 +13,7 @@
                 
                 <div class="py-3 text-center">
                     <i class="ni ni-bell-55 ni-3x"></i>
-                    <h4 class="heading mt-4">You should read this!</h4>
+                    <h4 class="heading mt-4">Vous devez lire ceci: </h4>
                     Etes-vous sûr de vouloir supprimer <span id="modal-body-title">l'élément</span> « <b id="modal-body-element">Element</b> » ?
                     <br><br>
                     <strong class="alert-error" id="modal-body-hint"></strong>
