--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,7 @@
           <a href="#" class="nav-link" target="_blank">Agence Immo</a>
         </li>
         <li class="nav-item">
-          <a href="https://github.com/creativetimofficial/argon-dashboard/blob/master/LICENSE.md" class="nav-link" target="_blank">MIT License</a>
+          <a href="#" class="nav-link" target="_blank">MIT License</a>
         </li>
       </ul>
     </div>
