--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,5 +1,5 @@
 <head>
-  <title>Argon Starter App</title>
+  <title>Agence Immobiblière Sénégalaise </title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
