--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -15,10 +15,10 @@
 <div class="container-fluid mt--6">
   <div class="row">
     <div class="col-xl-8">
-      <%#= render 'dashboard/charts/sales' %>
+      <%= render 'dashboard/charts/paiements' %>
     </div>
     <div class="col-xl-4">
-      <%#= render 'dashboard/charts/orders' %>
+      <%= render 'dashboard/charts/tenants' %>
     </div>
   </div>
   <div class="row">
