manage tenant and paiement

--- a/app/assets/stylesheets/core/cards/_card-profile.scss
+++ b/app/assets/stylesheets/core/cards/_card-profile.scss
@@ -9,6 +9,13 @@
   background-position: center top;
 }
 
+#tenant-header {
+    min-height: 200px;
+    background-image: url('https://res.cloudinary.com/finelunch/image/upload/v1619001433/mini-background_azdb5k.jpg');
+    background-size: cover;
+    background-position: center top;
+}
+
 .card-profile-image {
     position: relative;
 
