--- a/app/views/profile/_form.html.erb
+++ b/app/views/profile/_form.html.erb
@@ -41,6 +41,7 @@
       </div>
     </div>
 
+    <hr class="my-4" />
     <div class="row">
       <div class="col-lg">
         <div class="custom-file">
@@ -49,9 +50,9 @@
         </div>
       </div>
     </div>
-    <hr class="my-4" />
+    
 
-    <div class="pl-lg-4">
+    <div class="pl-lg-4 my-4">
       <div class="row">
         <div class="col-lg-6 text-left">
           <%= link_to dashboard_path, class: "btn btn-outline-default" do %>
