--- a/app/views/tenants/_form.html.erb
+++ b/app/views/tenants/_form.html.erb
@@ -53,28 +53,37 @@
       </div>
     </div>
     <div class="row">
-        <div class="col-lg-6">
-            <div class="form-group">
-              <% I18n.with_locale(:fr) do %>
-                <%= f.input :country_code, label: "Nationalité", priority_countries: ["SN", "FR", "DE"] %>
-              <% end %>
-            </div>
-        </div>
-        <div class="col-lg-6">
+      <div class="col-lg-6">
           <div class="form-group">
-            <%= f.input :date_of_birth, 
-            as: :string, 
-            html5: true,
-            label: "Date de naissance", 
-            class: "form-control" %>
+            <% I18n.with_locale(:fr) do %>
+              <%= f.input :country_code, label: "Nationalité", priority_countries: ["SN", "FR", "DE"] %>
+            <% end %>
           </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="form-group">
+          <%= f.input :date_of_birth, 
+          as: :string, 
+          html5: true,
+          label: "Date de naissance", 
+          class: "form-control" %>
         </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="form-group">
+          <%= f.input :status, collection: ["active", "inactive"], class: "form-control", label: "Status du locataire"  %>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="custom-file form-groupe">
+          <%= f.label :avatar, class: "custom-file-label", label: "Choisissez l'avatar" %>
+          <%= f.file_field :avatar, class: "custom-file-input" %>
+        </div>
+      </div>
     </div>
 
-    
-
-
-    
     <div class="pl-lg-4">
         <div class="row">
         <div class="col-lg-6">
