--- a/app/views/dashboard/charts/_paiements.html.erb
+++ b/app/views/dashboard/charts/_paiements.html.erb
@@ -7,13 +7,13 @@
       </div>
       <div class="col">
         <ul class="nav nav-pills justify-content-end">
-          <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}' data-prefix="$" data-suffix="k">
+          <li class="nav-item mr-2 mr-md-0" data-toggle="chart" data-target="#chart-paiements" data-update='{"data":{"datasets":[{"data":[0, 20, 10, 30, 15, 40, 20, 60, 60]}]}}' data-prefix="CFA" data-suffix="k">
             <a href="#" class="nav-link py-2 px-3 active" data-toggle="tab">
               <span class="d-none d-md-block">Années</span>
               <span class="d-md-none">A</span>
             </a>
           </li>
-          <li class="nav-item" data-toggle="chart" data-target="#chart-sales-dark" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}' data-prefix="$" data-suffix="k">
+          <li class="nav-item" data-toggle="chart" data-target="#chart-paiements" data-update='{"data":{"datasets":[{"data":[0, 20, 5, 25, 10, 30, 15, 40, 40]}]}}' data-prefix="CFA" data-suffix="k">
             <a href="#" class="nav-link py-2 px-3" data-toggle="tab">
               <span class="d-none d-md-block">Mois</span>
               <span class="d-md-none">M</span>
@@ -27,7 +27,7 @@
     <!-- Chart -->
     <div class="chart">
       <!-- Chart wrapper -->
-      <canvas id="chart-sales-dark" class="chart-canvas"></canvas>
+      <canvas id="chart-paiements" class="chart-canvas"></canvas>
     </div>
   </div>
 </div>
