--- a/app/views/paiements/index.html.erb
+++ b/app/views/paiements/index.html.erb
@@ -39,6 +39,14 @@
                 </div>
                 <!-- Light table -->
                 <div class="table-responsive">
+                    <div class="col-sm-2 mb-3">
+                        <select id="per_page_select" class="form-control">
+                            <option>select option</option>
+                            <% [10, 20, 50, 100].each do |per_page| %>
+                                <option><%= per_page %></option>
+                            <% end %>
+                        </select>
+                    </div>
                     <!-- Projects table -->
                     <table class="table align-items-center table-flush">
                         <thead class="thead-light">
@@ -77,7 +85,10 @@
                                     <td>
                                         <%= display_date(paiement.created_at, :long) %>
                                     </td>
-                                    <td><%= paiement.solde %>
+                                    <td class="d-flex justify-content-between">
+                                        <%= paiement.solde %>
+                                        <span class="<%= tenant_paiement_class(paiement)%> mr-2"><i class="fa <%= tenant_paiement_icon(paiement)%>"></i></span>
+                                    </td>
                                     <td class="text-right">
                                         <%= link_to edit_link, class: "btn btn-sm btn-icon-only text-info", role:"button" do %>
                                             <%= fa_icon 'edit' %>
