--- a/app/views/shared/_topnav.html.erb
+++ b/app/views/shared/_topnav.html.erb
@@ -44,8 +44,11 @@ end
           <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <div class="media align-items-center">
               <span class="avatar avatar-sm rounded-circle">
-                <%#= image_tag "theme/team-4.jpg", class: "navbar-brand-img", alt: "..." %>
-                <%= image_tag current_user.avatar_url, class: 'navbar-brand-img' %>
+                <% if current_user.avatar? %>
+                  <%= image_tag current_user.avatar_url, class: 'rounded-circle' %>
+                <% else %>
+                  <%= image_tag "https://res.cloudinary.com/finelunch/image/upload/v1619019772/avatar-3637425_1280_hsbuvr.png", class: "rounded-circle" %>
+                <% end %>
               </span>
               <div class="media-body  ml-2  d-none d-lg-block">
                 <span class="mb-0 text-sm  font-weight-bold"><%= current_user.firstname %></span>
