--- a/app/views/tenants/_summary_card.html.erb
+++ b/app/views/tenants/_summary_card.html.erb
@@ -4,8 +4,8 @@
     <div class="col-lg-3 order-lg-2">
       <div class="card-profile-image">
         <a href="#">
-          <% if current_user.avatar? %>
-            <%= image_tag current_user.avatar_url, class: 'rounded-circle' %>
+          <% if tenant.avatar? %>
+            <%= image_tag tenant.avatar_url, class: 'rounded-circle' %>
           <% else %>
             <%= image_tag "https://res.cloudinary.com/finelunch/image/upload/v1619019772/avatar-3637425_1280_hsbuvr.png", class: "rounded-circle" %>
           <% end %>
@@ -20,29 +20,32 @@
       <div class="col">
         <div class="card-profile-stats d-flex justify-content-center">
           <div>
-            <span class="heading"><%= @tenants %></span>
-            <span class="description">Locataires</span>
+            <span class="description">Telephone</span>
+            <span class="heading"><%= tenant.phone_number  %></span>
           </div>
           <div>
-            <span class="heading"><%= @apartments %></span>
-            <span class="description">appartements</span>
+            <span class="description">Profession</span>
+            <span class="heading"><%= tenant.profession %></span>
           </div>
           <div>
-            <span class="heading"><%= @paiements %></span>
-            <span class="description">paiements</span>
+            <span class="description">status</span><br/>
+            <span class="badge <%= tenant_status_class(tenant)%>">
+                <%= Tenant.human_enum_name(:status,tenant.status ) %>
+            </span>
           </div>
         </div>
       </div>
     </div>
     <div class="text-center">
       <h5 class="h3">
-        <%= current_user.full_name %><span class="font-weight-light"></span>
+        <%= tenant.full_name %><span class="font-weight-light"></span>
       </h5>
       <div class="h5 font-weight-300">
-        <i class="ni location_pin mr-2"></i>Dakar, Sénégal
+        <i class="ni location_pin mr-2"></i><%= tenant.identity_number %>
       </div>
       <div class="h5 mt-4">
-        <i class="ni business_briefcase-24 mr-2"></i>Responsable Agence Immobiblière
+        <span class="description">Addresse : </span>
+        <i class="ni business_briefcase-24 mr-2"></i><%= paiement.apartment.address %>
       </div>
       <div>
         <i class="ni education_hat mr-2"></i>Agence Immo Sen
