--- a/app/views/tenants/edit.html.erb
+++ b/app/views/tenants/edit.html.erb
@@ -4,7 +4,7 @@
             <%= render partial: 'shared/header', locals: {
                     icon: 'users',
                     breadcrumb_1: 'Locataire',
-                    breadcrumb_2: @tenant.full_name
+                    breadcrumb_2: @tenant.full_name,
                     main_url: tenants_path,
                     breadcrumb_url: '#'
                 }
@@ -15,7 +15,7 @@
 
 <div class="container-fluid mt--6">
     <div class="row justify-content-md-center">
-        <div class="col col-sm-6">
+        <div class="col col-sm-10">
             <div class="card">
                 <div class="card-body">
                     <%= render partial: 'tenants/form', locals: {
